Fix: max bubble width on smaller screens

--- a/packages/viewer/src/styles/viewer.module.scss
+++ b/packages/viewer/src/styles/viewer.module.scss
@@ -215,6 +215,7 @@
     z-index: 10;
 }
 
+// Text bubble that appears below the Share button (on screens that have been configured to display it)
 $ease-woosh: cubic-bezier(0.25, 2, 0.2, 1);
 $ease-hard-sine: cubic-bezier(0.9, 0, 0.2, 1);
 
@@ -223,7 +224,7 @@ $ease-hard-sine: cubic-bezier(0.9, 0, 0.2, 1);
     z-index: 1;
     top: 0;
     left: 10px;
-    width: 100%;
+    width: calc(100% - 20px);
 }
 
 .shareIncentive {
